--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -1,128 +1,238 @@
-<! DOCTYPE html>  
-<html>  
-    <head>  
-    <meta charset="utf-8">  
-    <title>  
-         Calculator using HTML Example  
-    </title>  
-    <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">  
-    <!-- CSS property to create interactive  
-        calculator interface -->  
-    <style>  
-    html {  
-  height: 100vh;  
-  display: flex;  
-  align-items: center;  
-  justify-content: center;  
-  background-color: #2d3436;  
-  background-image: linear-gradient(315deg, #2d3436 0%, #000000 74%);  
-  font-family: 'Cookie', cursive;  
-}  
-.title {  
-margin-bottom: 10px;  
-padding: 5px 0;  
-font-size: 40px;  
-font-weight: bold;  
-text-align: center;  
-color: red;  
-font-family: 'Cookie', cursive;  
-}  
-input[type=button] {  
-  width: 60px;  
-  height: 60px;  
-  float: left;  
-  padding: 0;  
-  margin: 5px;  
-  box-sizing: border-box;  
-  background: #ecedef;  
-  border: none;  
-  font-size: 30px;  
-  line-height: 30px;  
-  border-radius: 50%;  
-  font-weight: 700;  
-  color: #5E5858;  
-  cursor: pointer;    
-}  
-input[type=text] {  
-  width: 270px;  
-  height: 60px;  
-  float: left;  
-  padding: 0;  
-  box-sizing: border-box;  
-  border: none;  
-  background: none;  
-  color: red;  
-  text-align: right;  
-  font-weight: 700;  
-  font-size: 60px;  
-  line-height: 60px;  
-  margin: 0 25px;  
-  }  
-.calculator {  
-  background-color: #c0c0c0;  
-  box-shadow: 0px 0px 0px 10px #666;  
-  border: 5px solid black;  
-  border-radius: 10px;  
-}  
-#display {  
-  height: 40px;  
-  text-align: right;  
-  background-color: black;  
-  border: 3px solid white;  
-  font-size: 18px;  
-  left: 2px;  
-  top: 2px;  
-  color: red;  
-}  
-.btnTop {  
-  color: white;  
-  background-color: #6f6f6f;  
-  font-size: 14px;  
-  margin: auto;  
-  width: 50px;  
-  height: 25px;  
-}     
-    </style>  
-</head>  
-<body>  
-    <div class = "title"  align="center">  
-        Example of Calculator using HTML  
-    </div>  
-    <form name="Calculator" class = "calculator" >  
-<table border="2" align="center" cellpadding="15" cellspacing="12" bgcolor="#c0c0c0">  
-<tr>  
-<td>  
-<input type="text" name="Input" Size="35" id="display">  
-<br>  
-</td>  
-</tr>  
-<tr>  
-<td>  
-<input type="button" name = "one" style="font-size:30px" value=" 1 " OnClick="Calculator.Input.value += '1'">  
-<input type="button" name = "two" style = "font-size:30px" value=" 2 " OnCLick="Calculator.Input.value += '2'">  
-<input type="button" name = "three" style="font-size:30px" value=" 3 " OnClick="Calculator.Input.value += '3'">  
-<input type="button" name="add" class ="btnTop" style="font-size:30px" value=" + " OnClick="Calculator.Input.value += ' + '">  
-<br>  
-<input type="button" name = "four" style="font-size:30px" value=" 4 " OnClick="Calculator.Input.value += '4'">  
-<input type="button" name = "five" style="font-size:30px" value=" 5 " OnCLick="Calculator.Input.value += '5'">  
-<input type="button" name = "six" style="font-size:30px" value=" 6 " OnClick="Calculator.Input.value += '6'">  
-<input type="button" name = "minus" style="font-size:30px" value=" - " OnClick="Calculator.Input.value += ' - '">  
-<br>  
-<input type="button" name = "seven" style="font-size:30px" value=" 7 " OnClick="Calculator.Input.value += '7'">  
-<input type="button" name = "eight" style="font-size:30px" value=" 8 " OnCLick="Calculator.Input.value += '8'">  
-<input type="button" name = "nine" style="font-size:30px" value=" 9 " OnClick="Calculator.Input.value += '9'">  
-<input type="button" name = "mul" style="font-size:30px" value=" * "   
-OnClick="Calculator.Input.value += ' * '">  
-<br>  
-<input type="button" name = "clear" style="font-size:30px" value=" c " OnClick="Calculator.Input.value = ''">  
-<input type="button" name="zero" style="font-size:30px" value=" 0 " OnClick="Calculator.Input.value += '0'">  
-<input type="button" name="DoIt" style="font-size:30px" value=" = " OnClick="Calculator.Input.value = eval(Calculator.Input.value)">  
-<input type="button" name="div" style="font-size:30px" value=" / " OnClick="Calculator.Input.value += ' / '">  
-<br>  
-</td>  
-  
-</tr>  
-</table>  
-</form>  
-</body>  
-</html>     
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tic Tac Toe</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&family=Roboto&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+}
+
+nav{
+    background-color: rgb(214, 39, 106);
+    color: white;
+    height: 65px;
+    font-size: 27px;
+    display: flex;
+    align-items: center;
+    padding: 0 550px;
+    font-family: 'Roboto', sans-serif;
+}
+
+body{
+    background-image: url(play.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+nav ul{
+    list-style-type: none;
+}
+
+.gameContainer{ 
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.container{
+    display: grid;
+    grid-template-rows: repeat(3, 10vw);
+    grid-template-columns: repeat(3, 10vw);
+    font-family: 'Roboto', sans-serif;
+    position: relative;
+}
+
+.box{
+    border: 2px solid black;
+    font-size: 8vw;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box:hover{
+    background-color: rgb(242, 234, 250);
+}
+
+.info {
+    font-size: 22px;
+}
+
+.gameInfo{
+    padding: 0 34px;
+    font-family: 'Baloo Bhaina 2', cursive;
+}
+
+.gameInfo h1{
+    font-size: 2.5rem;
+}
+
+.imgbox img{
+    width: 0;
+    transition: width 1s ease-in-out;
+}
+
+.br-0{
+    border-right: 0;
+}
+
+.bl-0{
+    border-left: 0;
+}
+
+.bt-0{
+    border-top: 0;
+}
+
+.bb-0{
+    border-bottom: 0;
+}
+
+#reset {
+    margin: 0 23px;
+    padding: 1px 18px;
+    background: #f3e7f9;
+    border-radius: 6px;
+    cursor: pointer;
+    font-family: 'Baloo Bhaina 2';
+    font-size: 15px;
+    font-weight: bolder;
+}
+
+.line{
+    background-color: black;
+    height: 3px;
+    width: 0;
+    position: absolute;
+    background-color: #911d91;
+    transition: width 1s ease-in-out;
+}
+
+@media screen and (max-width: 950px)
+{
+    .gameContainer{
+        flex-wrap: wrap;
+    }
+    .gameInfo{
+        margin-top: 34px;
+    }
+    .gameInfo h1{
+        font-size: 1.5rem;
+    }
+    .container { 
+        grid-template-rows: repeat(3, 20vw);
+        grid-template-columns: repeat(3, 20vw);
+    }
+}
+    </style>
+  </head>
+  <body>
+    <nav>
+      <ul>
+        <li><b>Tic Tac Toe</b></li>
+      </ul>
+    </nav>
+
+    <div class="gameContainer">
+        <div class="container">
+          <div class="line"></div>
+        <div class="box bt-0 bl-0"><span class="boxtext"></span></div>
+        <div class="box bt-0"><span class="boxtext"></span></div>
+        <div class="box bt-0 br-0"><span class="boxtext"></span></div>
+        <div class="box bl-0"><span class="boxtext"></span></div>
+        <div class="box"><span class="boxtext"></span></div>
+        <div class="box br-0"><span class="boxtext"></span></div>
+        <div class="box bl-0 bb-0"><span class="boxtext"></span></div>
+        <div class="box bb-0"><span class="boxtext"></span></div>
+        <div class="box bb-0 br-0"><span class="boxtext"></span></div>
+      </div>
+      <div class="gameInfo">
+        <h1>Welcome to Tic Tac Toe</h1>
+        <div>
+          <span class="info">Turn for X</span>
+          <button id="reset">Reset</button>
+        </div>
+        <div class="imgbox">
+          <img src="excited.gif" alt="" />
+        </div>
+      </div>
+    </div>
+    <script>
+      console.log("Welcome to Tic Tac Toe")
+let music = new Audio("music.mp3")
+let audioTurn = new Audio("ting.mp3")
+let gameover = new Audio("gameover.mp3")
+let turn = "X"
+let isgameover = false;
+
+// Function to change the turn
+const changeTurn = ()=>{
+    return turn === "X"? "0": "X"
+}
+
+// Function to check for a win
+const checkWin = ()=>{
+    let boxtext = document.getElementsByClassName('boxtext');
+    let wins = [
+        [0, 1, 2, 5, 5, 0],
+        [3, 4, 5, 5, 15, 0],
+        [6, 7, 8, 5, 25, 0],
+        [0, 3, 6, -5, 15, 90],
+        [1, 4, 7, 5, 15, 90],
+        [2, 5, 8, 15, 15, 90],
+        [0, 4, 8, 5, 15, 45],
+        [2, 4, 6, 5, 15, 135],
+    ]
+    wins.forEach(e =>{
+        if((boxtext[e[0]].innerText === boxtext[e[1]].innerText) && (boxtext[e[2]].innerText === boxtext[e[1]].innerText) && (boxtext[e[0]].innerText !== "") ){
+            document.querySelector('.info').innerText = boxtext[e[0]].innerText + " Won"
+            isgameover = true
+            document.querySelector('.imgbox').getElementsByTagName('img')[0].style.width = "200px";
+            document.querySelector(".line").style.transform = `translate(${e[3]}vw, ${e[4]}vw) rotate(${e[5]}deg)`
+            document.querySelector(".line").style.width = "20vw";
+        }
+    })
+}
+
+// Game Logic
+// music.play()
+let boxes = document.getElementsByClassName("box");
+Array.from(boxes).forEach(element =>{
+    let boxtext = element.querySelector('.boxtext');
+    element.addEventListener('click', ()=>{
+        if(boxtext.innerText === ''){
+            boxtext.innerText = turn;
+            turn = changeTurn();
+            audioTurn.play();
+            checkWin();
+            if (!isgameover){
+                document.getElementsByClassName("info")[0].innerText  = "Turn for " + turn;
+            } 
+        }
+    })
+})
+
+// Add onclick listener to reset button
+reset.addEventListener('click', ()=>{
+    let boxtexts = document.querySelectorAll('.boxtext');
+    Array.from(boxtexts).forEach(element => {
+        element.innerText = ""
+    });
+    turn = "X"; 
+    isgameover = false
+    document.querySelector(".line").style.width = "0vw";
+    document.getElementsByClassName("info")[0].innerText  = "Turn for " + turn;
+    document.querySelector('.imgbox').getElementsByTagName('img')[0].style.width = "0px"
+})
+
+
+    </script>
+  </body>
+</html>
