--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -25,7 +25,7 @@ a {
 }
 
 body {
-    background-image: url(123.jpg);
+    background-image: url('/views/123.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
