--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
-
 <html>
+<body>
 
-    <head>
-        <title>Hello WOrld!</title>
-        <style>
-            a {
-                text-decoration: none;
-                color: black;
-            }
-        </style>
-    </head>
 
-    <body>
-        <h1>this webpage works at 8090 port</h1>
-       
-            
-    </body>
+<header>
+  <h2>Welcome Dear Students</h2>
+</header>
 
+ <section>
+ <nav>
+    <ul>
+     <li><a href="https://www.careers360.com/colleges/government-college-daulatpur-chowk">Click here to Visit college website</a></li> 
+    <!--  <li><a href="https://telegram.me/abhishekveeramalla">Telegram</a></li>   -->
+    </ul>
+  </nav> 
+ 
+  <article>
+    <h1>Please fill this form</h1>
+  <script src="https://sheetdb.io/s/f/g99gajnxdckqx.js"></script>
+   
+  </article>
+</section>
+
+
+
+</body>
 </html>
