--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -17,7 +17,7 @@
  
   <article>
     <h1>Please fill this form</h1>
-  <script src="https://sheetdb.io/s/f/g99gajnxdckqx.js"></script>
+  <script src="https://sheetdb.io/s/f/j1gizn95ajtm3.js"></script>
    
   </article>
 </section>
